dss/k8s/rabbitmq.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: "rabbitmq"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "rabbitmq"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "rabbitmq"
    spec:
      containers:
        - name: rabbitmq
          image: "bitnami/rabbitmq:3.8"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4369
            - containerPort: 5672
            - containerPort: 25672
            - containerPort: 15672
          resources: {}

      nodeSelector: {}
      affinity: {}
      tolerations: []
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  ports:
    - port: 4369
      targetPort: 4369
      protocol: TCP
      name: epmd
    - port: 5672
      targetPort: 5672
      protocol: TCP
      name: amqp
    - port: 15672
      targetPort: 15672
      protocol: TCP
      name: management
    - port: 25672
      targetPort: 25672
      protocol: TCP
      name: federation
  selector:
    app.kubernetes.io/name: rabbitmq
