dss/k8s/dss-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dss-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: wq2dss-ip
spec:
  backend:
    serviceName: wq2dss
    servicePort: 80
